Update StatefulOp mechanic